--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.2.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "next": "10.0.9",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "^12.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "4.0.3",
-    "tailwindcss": "2.0.4"
+    "tailwindcss": "^3.1.8"
   },
   "scripts": {
     "start": "next start",
